// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with errors 1`] = `
<div
  className="govuk-form-group govuk-form-group--error"
>
  <fieldset
    aria-describedby="date-of-birth-hint"
    className="govuk-fieldset"
    id="dobFieldset"
    role="group"
  >
    <legend
      className="govuk-fieldset__legend govuk-fieldset__legend--l"
    >
      <label
        className="govuk-label"
      >
        Date of birth
      </label>
    </legend>
    <span
      className="govuk-error-message"
      id="dobError"
    >
      <span
        className="govuk-visually-hidden"
      >
        Error:
      </span>
      this is a test
    </span>
    <span
      className="govuk-hint"
      id="date-of-birth-hint"
    >
      For example, 31 3 1980
    </span>
    <div
      className="govuk-date-input"
      id="date-of-birth"
    >
      <div
        className="govuk-date-input__item"
      >
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label govuk-date-input__label"
            htmlFor="dobDay"
          >
            Day
          </label>
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-2"
            id="dobDay"
            inputMode="numeric"
            name="dobDay"
            noValidate={true}
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
        </div>
      </div>
      <div
        className="govuk-date-input__item"
      >
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label govuk-date-input__label"
            htmlFor="dobMonth"
          >
            Month
          </label>
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-2"
            id="dobMonth"
            inputMode="numeric"
            name="dobMonth"
            noValidate={true}
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
        </div>
      </div>
      <div
        className="govuk-date-input__item"
      >
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label govuk-date-input__label"
            htmlFor="dobYear"
          >
            Year
          </label>
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-4"
            id="dobYear"
            inputMode="numeric"
            name="dobYear"
            noValidate={true}
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`renders correctly without props passed in 1`] = `
<div
  className="govuk-form-group "
>
  <fieldset
    aria-describedby="date-of-birth-hint"
    className="govuk-fieldset"
    id="dobFieldset"
    role="group"
  >
    <legend
      className="govuk-fieldset__legend govuk-fieldset__legend--l"
    >
      <label
        className="govuk-label"
      >
        Date of birth
      </label>
    </legend>
    <span
      className="govuk-hint"
      id="date-of-birth-hint"
    >
      For example, 31 3 1980
    </span>
    <div
      className="govuk-date-input"
      id="date-of-birth"
    >
      <div
        className="govuk-date-input__item"
      >
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label govuk-date-input__label"
            htmlFor="dobDay"
          >
            Day
          </label>
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-2"
            id="dobDay"
            inputMode="numeric"
            name="dobDay"
            noValidate={true}
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
        </div>
      </div>
      <div
        className="govuk-date-input__item"
      >
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label govuk-date-input__label"
            htmlFor="dobMonth"
          >
            Month
          </label>
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-2"
            id="dobMonth"
            inputMode="numeric"
            name="dobMonth"
            noValidate={true}
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
        </div>
      </div>
      <div
        className="govuk-date-input__item"
      >
        <div
          className="govuk-form-group"
        >
          <label
            className="govuk-label govuk-date-input__label"
            htmlFor="dobYear"
          >
            Year
          </label>
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-4"
            id="dobYear"
            inputMode="numeric"
            name="dobYear"
            noValidate={true}
            onChange={[Function]}
            pattern="[0-9]*"
            type="number"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
